RESOLVED FIXED305714
[JSC][WASM][Debugger] Fix instance registration race and use InstanceAnchor for lifecycle management
https://bugs.webkit.org/show_bug.cgi?id=305714
Summary [JSC][WASM][Debugger] Fix instance registration race and use InstanceAnchor f...
Yijia Huang
Reported 2026-01-17 23:19:15 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-17 23:20:40 PST
Yijia Huang
Comment 2 2026-01-17 23:24:57 PST
EWS
Comment 3 2026-01-19 11:13:41 PST
Committed 305830@main (4211cd058e41): <https://commits.webkit.org/305830@main> Reviewed commits have been landed. Closing PR #56779 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.